[package]
name = "chainhouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clickhouse = "0.11.4"
ethers = { version = "2.0.7", features = ["ws"] }
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.96"
clap = { version = "4.3.2", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4.18"
