[package]
name = "chainhouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ethers = { version = "2.0.7", features = ["ws"] }
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.96"
clap = { version = "4.3.2", features = ["derive"] }
pretty_env_logger = "0.5.0"
log = "0.4.18"
num_cpus = "1.15.0"
serde_bytes = "0.11"
klickhouse = "^0.9.0"
futures = "0.3.28"
env_logger = "0.10.0"
hex = "0.4.3"
